Staging/Edge/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-edge-ingress
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: cat.terrestrialplatform.link
      http:
        paths:
          - path: /staging/edge/(.*)
            pathType: Prefix

            backend:

              service:

                name: staging-edge-service

                port:

                  number: 32000
